# church-management-system

./: .gitignore  README.md  pyproject.toml  start-app.bat
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-create-and-update-member-records.md  1-2-assign-members-to-divisions.md  1-3-search-and-filter-the-directory.md  2-1-record-attendance-for-services.md  2-2-track-attendance-by-division.md  2-3-manage-event-rsvps.md  3-1-record-donations.md  3-2-track-building-fundraising-campaigns.md  3-3-review-giving-summaries.md  4-1-send-targeted-announcements.md  4-2-provide-basic-dashboards.md  4-3-export-summary-reports.md  architecture-spine.md  sprint-status.yaml
_bmad-output/planning-artifacts/: developer-ready-stories.md  epics-and-stories.md  mvp-roles-and-permissions.md  prd.md  sprint-plan.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_announcements.py  test_api_listing.py  test_attendance.py  test_dashboard.py  test_deletes.py  test_directory_integration.py  test_division_attendance.py  test_divisions_assignment.py  test_donations.py  test_events.py  test_exports.py  test_frontend.py  test_fundraising.py  test_giving_summary.py  test_members.py  test_members_relations.py  test_search_filter.py  test_tags.py
docs/: initial-product-brief.md  project-context.md
